<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">LuraPlayer</string>
    <string name="app_version" translatable="false">%s v.%s+%s</string>
    <string name="git_hash" translatable="false">"Git hash: %s"</string>

    <!--    Chromecast application id override    -->
    <!--    Unstable -->
        <string name="lura_chromecast_app_id" translatable="false" tools:ignore="Typos">D393430B</string>
<!--        <string name="lura_chromecast_app_id" translatable="false" tools:ignore="Typos">FAB79616</string>-->

    <!--    Stable-->
<!--    <string name="lura_chromecast_app_id" translatable="false" tools:ignore="Typos">CBAABB79</string>-->

    <!-- OLD APP STRINGS -->

    <string name="offline_playback">Offline Playback</string>

    <string name="play">Play</string>
    <string name="replay">Replay</string>
    <string name="stop">Stop</string>
    <string name="remove">Remove</string>
    <string name="info">Info</string>
    <string name="remove_all">Remove All</string>
    <string name="pause_all">Pause All</string>
    <string name="paused">Paused</string>
    <string name="abort">Abort</string>
    <string name="resume_all">Resume All</string>
    <string name="resolution">Resolution</string>
    <string name="max_parallel_download">Max Parallel Download:</string>
    <string name="starting">Starting</string>
    <string name="queued">Queued</string>
    <string name="downloading">Downloading</string>
    <string name="downloaded">Downloaded</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="removing">Removing</string>
    <string name="licence_expired">Licence Expired</string>
    <string name="licence_updating">Licence Updating</string>
    <string name="licence_update_failed">Licence Update Failed</string>
    <string name="storage_dialog_title">Allowed Storage</string>
    <string name="settings">Settings</string>
    <string name="storage">Storage</string>
    <string name="options">Options</string>
    <string name="offline_progress">- %d%%</string>

    <string name="download_requirement">Download Requirement</string>
    <string name="max_parallel_limit">Max Parallel Limit</string>


    <!-- ****************** -->


    <!-- MODERN APP STRINGS -->

    <string name="edit">Edit</string>
    <string name="download">Download</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="delete">Delete</string>
    <string name="more">More</string>
    <string name="cancel">Cancel</string>
    <string name="recommendations">Recommendations</string>
    <string name="copy">Copy</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="empty_view_title">No Downloads</string>
    <string name="empty_view_info">All downloaded videos will be listed here.</string>
    <string name="parallel_downloads_info">Maximum sync video download</string>
    <string name="offline_failed">Offline Failed</string>
    <string name="network_requirement_not_met">Check your network settings</string>
    <string name="select_all">Select All</string>
    <string name="end_of_partial_content">You have reached end of the partially downloaded content</string>

    <string name="settings_title_downloads">Downloads</string>
    <string name="settings_item_wifi_only">Wi-Fi Only</string>
    <string name="settings_item_storage">Storage</string>
    <string name="settings_item_parallel_downloads">Parallel Downloads</string>
    <string name="settings_item_video_quality">Video Quality</string>

    <string name="storage_info">%s will be used</string>
    <string name="storage_used">%s Used</string>
    <string name="storage_remaining">%s Remaining</string>

    <string name="configuration_dialog_title">Lura Configuration</string>
    <string name="configuration_topic_general">General</string>
    <string name="configuration_topic_licence">Licence</string>
    <string name="configuration_asset_id">Asset ID:&#160;%s</string>
    <string name="configuration_progress">Progress:&#160;%s</string>
    <string name="configuration_total_bytes">Total Bytes:&#160;%s</string>
    <string name="configuration_current_bytes">Current Bytes:&#160;%s</string>
    <string name="configuration_state">State:&#160;%s</string>
    <string name="configuration_start_time">Start Time (ms):&#160;\n%s</string>
    <string name="configuration_update_time">Update Time (ms):&#160;\n%s</string>
    <string name="configuration_licence">Licence</string>
    <string name="configuration_licence_total_playback_duration">Total Playback Duration:&#160;%s</string>
    <string name="configuration_licence_expiration_duration">Expiration Duration:&#160;%s</string>

    <string name="action_sheet_title">Download Quality</string>
    <string name="ask_each_time">Ask each time</string>
    <string name="sd">SD</string>
    <string name="hd">HD</string>
    <string name="full_hd">Full HD</string>
    <string name="ultra_hd">Ultra HD</string>

    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_vertical">Vertical</string>
    <string name="bottom_menu_downloads">Downloads</string>
    <string name="bottom_menu_settings">Settings</string>

    <string name="popup_menu_item_stats">Stats</string>
    <string name="popup_menu_item_renew">Renew</string>
    <string name="popup_menu_item_delete">Delete</string>
    <string name="popup_menu_item_download">Download</string>
    <string name="popup_menu_item_resume">Resume</string>
    <string name="popup_menu_item_pause">Pause</string>

    <string name="confirmation_title_delete_multiple">Delete Selected Videos</string>
    <string name="confirmation_message_delete_multiple">Are you sure you want to delete all selected videos from your device?</string>
    <string name="confirmation_title_delete">Delete Video</string>
    <string name="confirmation_message_delete">Are you sure you want to delete this video from your device?</string>

    <!-- ****************** -->

    <!--        String resources available to override      -->

    <string name="luraSettingPlaybackSpeedTitle">Playback Speed</string>
    <string name="luraSettingSubtitlesTitle">Subtitles/CC</string>
    <string name="luraOff">Off</string>
    <string name="luraTrack">Track %d</string>

    <string name="luraSettingQualityTitle">Quality</string>
    <string name="luraAutoBitrate">Auto (%.0f kbps)</string>
    <string name="luraAuto">Auto</string>
    <string name="luraBitrate">%.0f kbps</string>

    <string name="luraPlaybackSpeedNormal">Normal</string>

    <string name="luraLive">LIVE</string>

    <string name="luraSkipAd">Skip Ad</string>
    <string name="luraAdTitle" formatted="true">Your video will continue after ads.</string>

    <string name="luraAnnotationIntro">Skip intro</string>
    <string name="luraAnnotationOutro">Skip outro</string>
</resources>