<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_item_resume"
        android:enabled="true"
        android:icon="@drawable/ic_action_resume"
        android:title="@string/resume" />
    <item
        android:id="@+id/menu_item_pause"
        android:enabled="true"
        android:icon="@drawable/ic_action_pause"
        android:title="@string/pause" />
    <item
        android:id="@+id/menu_item_delete"
        android:enabled="true"
        android:icon="@drawable/ic_trash"
        android:title="@string/delete" />

    <item
        android:id="@+id/menu_item_select_all"
        android:enabled="true"
        android:icon="@drawable/ic_selected"
        android:title="@string/select_all" />
</menu>