<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/modern_rounded_corner_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/heebo"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/configuration_dialog_title"
            android:textColor="@color/action_sheet_title"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/title_separator"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#7B7B7B"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_separator">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/heebo"
                android:lineSpacingExtra="-5sp"
                android:text="@string/configuration_topic_general"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/asset_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginVertical="6dp"
                android:fontFamily="@font/heebo"
                android:lineSpacingExtra="3sp"
                android:text="@string/configuration_asset_id"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginVertical="6dp"
                android:fontFamily="@font/heebo"
                android:lineSpacingExtra="3sp"
                android:text="@string/configuration_progress"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/total_bytes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginVertical="6dp"
                android:fontFamily="@font/heebo"
                android:lineSpacingExtra="3sp"
                android:text="@string/configuration_total_bytes"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/current_bytes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginVertical="6dp"
                android:fontFamily="@font/heebo"
                android:lineSpacingExtra="3sp"
                android:text="@string/configuration_current_bytes"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginVertical="6dp"
                android:fontFamily="@font/heebo"
                android:lineSpacingExtra="3sp"
                android:text="@string/configuration_state"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginVertical="6dp"
                android:fontFamily="@font/heebo"
                android:lineSpacingExtra="3sp"
                android:text="@string/configuration_start_time"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/update_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginVertical="6dp"
                android:fontFamily="@font/heebo"
                android:lineSpacingExtra="3sp"
                android:text="@string/configuration_update_time"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginVertical="18dp"
                android:background="#7B7B7B"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/heebo"
                android:lineSpacingExtra="-5sp"
                android:text="@string/configuration_topic_licence"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/licence_total_playback_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginVertical="6dp"
                android:fontFamily="@font/heebo"
                android:lineSpacingExtra="3sp"
                android:text="@string/configuration_licence_total_playback_duration"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/licence_expiration_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginVertical="6dp"
                android:fontFamily="@font/heebo"
                android:lineSpacingExtra="3sp"
                android:text="@string/configuration_licence_expiration_duration"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/option_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/modern_rounded_corner_background"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:padding="17dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/heebo"
            android:lineSpacingExtra="2sp"
            android:text="@string/close"
            android:textColor="@color/action_sheet_cancel"
            android:textSize="17sp" />
    </FrameLayout>
</LinearLayout>