<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/modern_rounded_corner_background"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/heebo"
                android:text="@string/action_sheet_title"
                android:textColor="@color/action_sheet_title"
                android:textSize="16sp" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#7B7B7B" />

        <FrameLayout
            android:id="@+id/option_sd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:padding="17dp">

            <TextView
                android:id="@+id/sd_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/heebo"
                android:text="@string/sd"
                android:textColor="@color/action_sheet_button"
                android:textSize="16sp" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#7B7B7B" />

        <FrameLayout
            android:id="@+id/option_hd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:padding="17dp">

            <TextView
                android:id="@+id/hd_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/heebo"
                android:text="@string/hd"
                android:textColor="@color/action_sheet_button"
                android:textSize="16sp" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#7B7B7B" />

        <FrameLayout
            android:id="@+id/option_full_hd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:padding="17dp">

            <TextView
                android:id="@+id/full_hd_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/heebo"
                android:text="@string/full_hd"
                android:textColor="@color/action_sheet_button"
                android:textSize="16sp" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#7B7B7B" />

        <FrameLayout
            android:id="@+id/option_ultra_hd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:padding="17dp">

            <TextView
                android:id="@+id/ultra_hd_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/heebo"
                android:text="@string/ultra_hd"
                android:textColor="@color/action_sheet_button"
                android:textSize="16sp" />
        </FrameLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/option_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/modern_rounded_corner_background"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:padding="17dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/heebo"
            android:lineSpacingExtra="2sp"
            android:text="@string/cancel"
            android:textColor="@color/action_sheet_cancel"
            android:textSize="17sp" />
    </FrameLayout>
</LinearLayout>